Updated package.json and fixed minor alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ html, body {
 }
 
 .prog_bar {
-  width: 90%;
+  width: 75%;
 }
 #play{
   margin-left: 44%;
